--- a/foundry.toml
+++ b/foundry.toml
@@ -1,13 +1,11 @@
 [profile.default]
 solc = '0.8.17'
-via_ir = false
+via_ir = true
 src = 'src'
 out = 'out'
 libs = ['lib']
-fuzz_runs = 5000
-fuzz_max_global_rejects = 2_000_000
 optimizer = true
-optimizer_runs = 1_042_069
+optimizer_runs = 4_294_967_295
 extra_output = ["evm.assembly", "irOptimized", "devdoc"]
 gas_reports = ["ERC721"]
 
@@ -24,6 +22,10 @@ yul = true
 [profile.default.optimizer_details.yulDetails]
 stackAllocation = true
 optimizerSteps = "dhfoDgvulfnTUtnIf[xa[r]EscLMcCTUtTOntnfDIulLculVcul [j]Tpeulxa[rul]xa[r]cLgvifCTUca[r]LSsTOtfDnca[r]Iulc]jmul[jul] VcTOcul jmul"
+
+[fuzz]
+runs = 5000
+max_test_rejects = 2_000_000
 
 [fmt]
 line_length = 120
