--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,7 @@ libs = ['lib']
 optimizer = true
 optimizer_runs = 4_294_967_295
 extra_output = ["evm.assembly", "irOptimized", "devdoc"]
-gas_reports = ["ERC721"]
+gas_reports = ["ERC721Mock"]
 
 [profile.default.optimizer_details]
 peephole = true
