Split ERC721 and Enumerable Spec

--- a/foundry.toml
+++ b/foundry.toml
@@ -7,7 +7,7 @@ libs = ['lib']
 optimizer = true
 optimizer_runs = 4_294_967_295
 extra_output = ["evm.assembly", "irOptimized", "devdoc"]
-gas_reports = ["ERC721Mock", "ERC4494Mock"]
+gas_reports = ["ERC721Mock", "ERC4494Mock", "ERC721EnumerableMock"]
 remappings = [
     'forge-std/=lib/forge-std/src/',
     'ERC721/=src/',
